; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_ldap.c_str2scope.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_ldap.c_str2scope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"one\00", align 1
@LDAP_SCOPE_ONELEVEL = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"onetree\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"base\00", align 1
@LDAP_SCOPE_BASE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [4 x i8] c"sub\00", align 1
@LDAP_SCOPE_SUBTREE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [8 x i8] c"subtree\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @str2scope to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @str2scope(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 @strcasecompare(i8* %4, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0))
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @LDAP_SCOPE_ONELEVEL, align 4
  store i32 %8, i32* %2, align 4
  br label %34

9:                                                ; preds = %1
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @strcasecompare(i8* %10, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i32, i32* @LDAP_SCOPE_ONELEVEL, align 4
  store i32 %14, i32* %2, align 4
  br label %34

15:                                               ; preds = %9
  %16 = load i8*, i8** %3, align 8
  %17 = call i64 @strcasecompare(i8* %16, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0))
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = load i32, i32* @LDAP_SCOPE_BASE, align 4
  store i32 %20, i32* %2, align 4
  br label %34

21:                                               ; preds = %15
  %22 = load i8*, i8** %3, align 8
  %23 = call i64 @strcasecompare(i8* %22, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %27

25:                                               ; preds = %21
  %26 = load i32, i32* @LDAP_SCOPE_SUBTREE, align 4
  store i32 %26, i32* %2, align 4
  br label %34

27:                                               ; preds = %21
  %28 = load i8*, i8** %3, align 8
  %29 = call i64 @strcasecompare(i8* %28, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0))
  %30 = icmp ne i64 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %27
  %32 = load i32, i32* @LDAP_SCOPE_SUBTREE, align 4
  store i32 %32, i32* %2, align 4
  br label %34

33:                                               ; preds = %27
  store i32 -1, i32* %2, align 4
  br label %34

34:                                               ; preds = %33, %31, %25, %19, %13, %7
  %35 = load i32, i32* %2, align 4
  ret i32 %35
}

declare dso_local i64 @strcasecompare(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
